US11694 - Updated Manager plugins SSL support